# dice_models

./: .dockerignore  .gitattributes  .gitignore  README.md  compose.yaml  debug_mesh.py  dockerfile.www  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  test_curve_quality.py
.github/: copilot-instructions.md  copilot_instructions.md
.github/workflows/: docker.yaml  pypi.yaml  pytest.yaml
demo/: README.md  demo_all_features.py  demo_batch_config.json  demo_cli.py
demo/demo_output/: blank_d10.stl  blank_d12.stl  blank_d20.stl  blank_d4.stl  blank_d6.stl  blank_d8.stl  curve_demo_high_8.stl  curve_demo_highest_8.stl  curve_demo_low_8.stl  curve_demo_medium_8.stl  d20_custom_layout.stl  d6_depth_0.3mm.stl  d6_depth_0.8mm.stl  d6_depth_1.5mm.stl  d6_font_arial.stl  d6_font_arial_bold.stl  d6_font_times_new_roman_bold.stl  d6_large_text.stl  d6_size_2.0mm.stl  d6_size_4.0mm.stl  d6_size_6.0mm.stl  d6_small_text.stl  d6_traditional_layout.stl  d8_reverse_layout.stl  standard_d10.stl  standard_d12.stl  standard_d20.stl  standard_d4.stl  standard_d6.stl  standard_d8.stl
dice_models/: __init__.py  cli.py
dice_models/conf/: settings.py
dice_models/geometry/: __init__.py  compatibility.py  dice.py  factory.py  layouts.py  polyhedra.py  text.py
dice_models/geometry/base/: __init__.py  polyhedron.py  utils.py
docs/dev/: README.md  api.md  cli.md  settings.md
tests/: conftest.py  test_cli.py  test_d10_pole_alignment.py  test_dice_geometry.py  test_font_engraving.py  test_hole_characters.py  test_integration.py  test_polyhedra.py
(+7 files in other folders)
