[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Robert Hafner"}]
dependencies = [
  "fastapi",
  "fonttools",
  "numpy",
  "numpy-stl",
  "pydantic~=2.0",
  "pydantic-settings",
  "triangle",
  "trimesh[easy]",
  "typer",
]
description = ""
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "dice_models"
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "greenlet",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "pytest-xdist",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
  "uv",
]

[project.scripts]
dice_models = "dice_models.cli:app"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./dice_models/_version.py",
  "./dice_models/__init__.py",
  "./tests/*",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [".venv", "./dice_models/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
dice_models = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "dice_models/_version.py"
